syntax = "proto3";

package openagents.hydra.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// Hydra credit contracts for MVP-1 runtime commerce lanes.
//
// These wire messages back the runtime internal HTTP boundary and the neobank
// runtime rail client boundary. JSON payloads are interoperability views; proto
// remains the contract authority (ADR-0002 / INV-01).

enum CreditScopeType {
  CREDIT_SCOPE_TYPE_UNSPECIFIED = 0;
  CREDIT_SCOPE_TYPE_NIP90 = 1;
}

enum CreditOfferStatus {
  CREDIT_OFFER_STATUS_UNSPECIFIED = 0;
  CREDIT_OFFER_STATUS_OFFERED = 1;
  CREDIT_OFFER_STATUS_REVOKED = 2;
  CREDIT_OFFER_STATUS_ACCEPTED = 3;
}

enum CreditEnvelopeStatus {
  CREDIT_ENVELOPE_STATUS_UNSPECIFIED = 0;
  CREDIT_ENVELOPE_STATUS_ACCEPTED = 1;
  CREDIT_ENVELOPE_STATUS_SETTLED = 2;
  CREDIT_ENVELOPE_STATUS_DEFAULTED = 3;
  CREDIT_ENVELOPE_STATUS_REVOKED = 4;
}

enum CreditSettlementOutcome {
  CREDIT_SETTLEMENT_OUTCOME_UNSPECIFIED = 0;
  CREDIT_SETTLEMENT_OUTCOME_SUCCESS = 1;
  CREDIT_SETTLEMENT_OUTCOME_FAILED = 2;
  CREDIT_SETTLEMENT_OUTCOME_EXPIRED = 3;
  CREDIT_SETTLEMENT_OUTCOME_DEFAULTED = 4;
}

enum HydraCreditErrorCode {
  HYDRA_CREDIT_ERROR_CODE_UNSPECIFIED = 0;
  HYDRA_CREDIT_ERROR_CODE_INVALID_REQUEST = 1;
  HYDRA_CREDIT_ERROR_CODE_NOT_FOUND = 2;
  HYDRA_CREDIT_ERROR_CODE_CONFLICT = 3;
  HYDRA_CREDIT_ERROR_CODE_DEPENDENCY_UNAVAILABLE = 4;
  HYDRA_CREDIT_ERROR_CODE_INTERNAL_ERROR = 5;
}

message HydraCreditError {
  HydraCreditErrorCode code = 1;
  string message = 2;
  bool retryable = 3;
  google.protobuf.Struct details = 4;
}

message CreditIntentRequestV1 {
  string schema = 1;
  string idempotency_key = 2;
  string agent_id = 3;
  CreditScopeType scope_type = 4;
  string scope_id = 5;
  uint64 max_sats = 6;
  google.protobuf.Timestamp exp = 7;
  google.protobuf.Struct policy_context = 8;
}

message CreditIntentRowV1 {
  string intent_id = 1;
  string idempotency_key = 2;
  string agent_id = 3;
  string scope_type = 4;
  string scope_id = 5;
  int64 max_sats = 6;
  google.protobuf.Timestamp exp = 7;
  google.protobuf.Timestamp created_at = 8;
}

message CreditIntentResponseV1 {
  string schema = 1;
  CreditIntentRowV1 intent = 2;
}

message CreditOfferRequestV1 {
  string schema = 1;
  string agent_id = 2;
  string pool_id = 3;
  optional string intent_id = 4;
  CreditScopeType scope_type = 5;
  string scope_id = 6;
  uint64 max_sats = 7;
  uint32 fee_bps = 8;
  bool requires_verifier = 9;
  google.protobuf.Timestamp exp = 10;
}

message CreditOfferRowV1 {
  string offer_id = 1;
  string agent_id = 2;
  string pool_id = 3;
  string scope_type = 4;
  string scope_id = 5;
  int64 max_sats = 6;
  int32 fee_bps = 7;
  bool requires_verifier = 8;
  google.protobuf.Timestamp exp = 9;
  string status = 10;
  google.protobuf.Timestamp issued_at = 11;
}

message CreditOfferResponseV1 {
  string schema = 1;
  CreditOfferRowV1 offer = 2;
}

message CreditEnvelopeRequestV1 {
  string schema = 1;
  string offer_id = 2;
  string provider_id = 3;
}

message CreditEnvelopeRowV1 {
  string envelope_id = 1;
  string offer_id = 2;
  string agent_id = 3;
  string pool_id = 4;
  string provider_id = 5;
  string scope_type = 6;
  string scope_id = 7;
  int64 max_sats = 8;
  int32 fee_bps = 9;
  google.protobuf.Timestamp exp = 10;
  string status = 11;
  google.protobuf.Timestamp issued_at = 12;
}

message CreditEnvelopeResponseV1 {
  string schema = 1;
  CreditEnvelopeRowV1 envelope = 2;
  google.protobuf.Struct receipt = 3;
}

message CreditSettleRequestV1 {
  string schema = 1;
  string envelope_id = 2;
  bool verification_passed = 3;
  string verification_receipt_sha256 = 4;
  string provider_invoice = 5;
  string provider_host = 6;
  uint64 max_fee_msats = 7;
  google.protobuf.Struct policy_context = 8;
}

message CreditSettleResponseV1 {
  string schema = 1;
  string envelope_id = 2;
  string settlement_id = 3;
  string outcome = 4;
  uint64 spent_sats = 5;
  uint64 fee_sats = 6;
  string verification_receipt_sha256 = 7;
  optional string liquidity_receipt_sha256 = 8;
  google.protobuf.Struct receipt = 9;
}

message CreditCircuitBreakersV1 {
  bool halt_new_envelopes = 1;
  bool halt_large_settlements = 2;
}

message CreditPolicySnapshotV1 {
  uint64 max_sats_per_envelope = 1;
  uint64 max_outstanding_envelopes_per_agent = 2;
  uint64 max_offer_ttl_seconds = 3;
  int64 underwriting_history_days = 4;
  uint64 underwriting_base_sats = 5;
  double underwriting_k = 6;
  double underwriting_default_penalty_multiplier = 7;
  uint32 min_fee_bps = 8;
  uint32 max_fee_bps = 9;
  double fee_risk_scaler = 10;
  int64 health_window_seconds = 11;
  uint32 health_settlement_sample_limit = 12;
  uint32 health_ln_pay_sample_limit = 13;
  uint64 circuit_breaker_min_sample = 14;
  double loss_rate_halt_threshold = 15;
  double ln_failure_rate_halt_threshold = 16;
  uint64 ln_failure_large_settlement_cap_sats = 17;
}

message CreditHealthResponseV1 {
  string schema = 1;
  google.protobuf.Timestamp generated_at = 2;
  uint64 open_envelope_count = 3;
  uint64 open_reserved_commitments_sats = 4;
  uint64 settlement_sample = 5;
  uint64 loss_count = 6;
  double loss_rate = 7;
  uint64 ln_pay_sample = 8;
  uint64 ln_fail_count = 9;
  double ln_failure_rate = 10;
  CreditCircuitBreakersV1 breakers = 11;
  CreditPolicySnapshotV1 policy = 12;
}

message CreditAgentExposureResponseV1 {
  string schema = 1;
  string agent_id = 2;
  uint64 open_envelope_count = 3;
  uint64 open_exposure_sats = 4;
  uint64 settled_count_30d = 5;
  uint64 success_volume_sats_30d = 6;
  double pass_rate_30d = 7;
  uint64 loss_count_30d = 8;
  uint64 underwriting_limit_sats = 9;
  uint32 underwriting_fee_bps = 10;
  bool requires_verifier = 11;
  google.protobuf.Timestamp computed_at = 12;
}
