syntax = "proto3";

package openagents.runtime.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// Unified marketplace commerce grammar (v1).
//
// This file defines portable, machine-readable contract surfaces that can be
// mirrored across interop substrates (e.g. Nostr) without moving high-rate
// orchestration/streaming traffic out of Nexus.
//
// Notes:
// - Authority mutations remain authenticated HTTP only (INV-02).
// - This grammar is additive-only in v1 (see ADR-0002).
// - Canonical hashing/signature pipelines are defined separately and referenced
//   via the optional `canonical_sha256` field until enforced (OA-ECON-022).

enum MarketplaceSurface {
  MARKETPLACE_SURFACE_UNSPECIFIED = 0;
  MARKETPLACE_SURFACE_COMPUTE = 1;
  MARKETPLACE_SURFACE_SKILLS = 2;
  MARKETPLACE_SURFACE_DATA = 3;
}

enum CommerceMessageKind {
  COMMERCE_MESSAGE_KIND_UNSPECIFIED = 0;
  COMMERCE_MESSAGE_KIND_RFQ = 1;
  COMMERCE_MESSAGE_KIND_OFFER = 2;
  COMMERCE_MESSAGE_KIND_QUOTE = 3;
  COMMERCE_MESSAGE_KIND_ACCEPT = 4;
  COMMERCE_MESSAGE_KIND_CANCEL = 5;
  COMMERCE_MESSAGE_KIND_RECEIPT = 6;
  COMMERCE_MESSAGE_KIND_REFUND = 7;
  COMMERCE_MESSAGE_KIND_DISPUTE = 8;
}

message CommerceMoney {
  // Currency code. Phase-0/1 compute commerce uses "msats".
  string currency = 1;
  uint64 amount = 2;
}

message CommerceFeeComponent {
  // Stable component key (e.g. "provider", "operator_fee", "policy_adder").
  string component = 1;
  CommerceMoney amount = 2;
  // Optional human-readable notes (not contract-critical).
  string notes = 3;
}

message CommerceRfq {
  string rfq_id = 1;
  MarketplaceSurface surface = 2;
  string buyer_id = 3;

  // Requested job surface identifier (compute now; skills/data later).
  string job_type = 4;
  // Deterministic job/objective hash as defined by the job registry.
  string objective_hash = 5;

  // Maximum all-in spend willingness (includes fees, not just provider unit price).
  CommerceMoney max_total = 6;

  google.protobuf.Timestamp created_at = 7;

  // Optional desired scheduling windows (non-binding hints).
  google.protobuf.Timestamp desired_start_at = 8;
  google.protobuf.Timestamp desired_end_at = 9;

  // Surface-specific constraints (resources, locality, compliance, etc).
  google.protobuf.Struct constraints = 10;
}

message CommerceOffer {
  string offer_id = 1;
  string rfq_id = 2;
  string provider_id = 3;
  google.protobuf.Timestamp created_at = 4;

  // Surface capability strings (e.g. "oa.sandbox_run.v1").
  repeated string capabilities = 5;

  // Provider-proposed constraints/notes beyond the RFQ.
  google.protobuf.Struct terms_hint = 6;
}

message CommerceAllInQuote {
  string quote_id = 1;
  string rfq_id = 2;
  string offer_id = 3;
  string provider_id = 4;

  // Provider component price (excluding operator/policy fees).
  CommerceMoney provider_price = 5;

  // Explicit fee surfaces to make quotes machine-comparable.
  repeated CommerceFeeComponent fees = 6;

  // All-in total price (provider + fees).
  CommerceMoney total_price = 7;

  // Binding quote window.
  google.protobuf.Timestamp valid_until = 8;

  // Cancellation and refund semantics (may be empty in v1 and added later).
  google.protobuf.Timestamp cancel_until = 9;
  CommerceMoney cancel_fee = 10;
  google.protobuf.Timestamp refund_until = 11;

  // Surface-specific constraints frozen into the quote (optional).
  google.protobuf.Struct constraints = 12;
}

message CommerceAccept {
  string order_id = 1;
  string quote_id = 2;
  string buyer_id = 3;
  google.protobuf.Timestamp accepted_at = 4;

  // Optional explicit reservation amount captured for this acceptance.
  CommerceMoney reserved_total = 5;
}

message CommerceCancel {
  string cancel_id = 1;
  string order_id = 2;
  string initiated_by = 3;
  google.protobuf.Timestamp canceled_at = 4;
  string reason = 5;
  CommerceMoney cancel_fee_charged = 6;
}

message CommerceReceipt {
  string receipt_id = 1;
  string order_id = 2;
  string quote_id = 3;
  string provider_id = 4;
  string buyer_id = 5;
  google.protobuf.Timestamp issued_at = 6;

  // Charged all-in amount after verification/settlement.
  CommerceMoney charged_total = 7;
  repeated CommerceFeeComponent fees = 8;

  // Portable linkages to authoritative receipts/artifacts.
  string run_id = 9;
  string objective_hash = 10;
  string verification_receipt_sha256 = 11;
  string verification_receipt_url = 12;
  string treasury_receipt_sha256 = 13;
  string treasury_receipt_url = 14;

  // Outcome classification for reputation/labels.
  string outcome = 15;
}

message CommerceRefund {
  string refund_id = 1;
  string order_id = 2;
  google.protobuf.Timestamp issued_at = 3;
  string reason = 4;
  CommerceMoney amount = 5;
  string treasury_receipt_sha256 = 6;
  string treasury_receipt_url = 7;
}

message CommerceDispute {
  string dispute_id = 1;
  string order_id = 2;
  string opened_by = 3;
  google.protobuf.Timestamp opened_at = 4;
  string claim = 5;
  google.protobuf.Struct evidence = 6;
  string status = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CommerceEnvelope {
  CommerceMessageKind kind = 1;
  string message_id = 2;

  // Operator/market identifier for multi-homing and cross-market routing.
  string marketplace_id = 3;

  // Principal responsible for this message.
  string actor_id = 4;

  google.protobuf.Timestamp created_at = 5;

  // Idempotency key for authority mutation application (when applicable).
  string idempotency_key = 6;

  oneof body {
    CommerceRfq rfq = 10;
    CommerceOffer offer = 11;
    CommerceAllInQuote quote = 12;
    CommerceAccept accept = 13;
    CommerceCancel cancel = 14;
    CommerceReceipt receipt = 15;
    CommerceRefund refund = 16;
    CommerceDispute dispute = 17;
  }

  // Optional canonical hash pointer (SHA-256 hex), computed over the canonical
  // view of this message as defined by the canonicalization pipeline.
  string canonical_sha256 = 20;
}

